# HigherDOSE-Dashboards

./: .gitignore  AGENTS.MD  CAMPAIGN_ANALYSIS_README.md  CONTRIBUTING.md  DEPLOYMENT.md  Q1_FORECAST_README.md  README.md  TODO.md  context.md  cursor_automate_slack_conversation_extr.md  december_comparison_app.py  filter_december_data.py  january_comparison_app.py  metrics.md  november_insights_app.py  piplist.md  product-list.md  pyproject.toml  q1_growth_forecast_app.py  q4_tracker_streamlit.py  report_analysis_monthly.py  report_analysis_weekly.py  report_analysis_weekly_products.py  requirements.txt  rolodex.json  run_slack_fetcher.py  slack-2.json  slack.json  slack_messages.md  slack_to_markdown.py  streamlit_app.py  unattributed_lines_2025-07-15.csv  unattributed_lines_2025-07-21.csv  update_december_data.py  weekly-growth-report-2025-07-14.md  weekly-growth-report-2025-07-21-combined.md  weekly-growth-report-july-13-2025.md  weekly-growth-report-with-products-2025-07-21.md  weekly_report_analysis.py  winning-chat-slack-rip-cursor_debugging_data_extraction_with_p.md
.githooks/: pre-commit
.github/: STREAMLIT_DEPLOYMENT.md
brain/: comprehensive_executive_summary_july_7_to_13.md  executive_summary_july_7_to_13.md  my_custom_timeline.csv
config/: README.md  __init__.py  config.ini
data/: .gitkeep  README.md  rolodex.json
docs/: metrics-old.md  slack_curl_example.txt  winning-prompts.txt
email/: gmail_archive.py  tutorial.md
gmail_client/: archive_all.py  gmail_archive.py
mail/: archive_all.py  debug_email_format.py  gmail_archive.py  gmail_monitor.py
(+1129 files in other folders)
